# graphql-haskell

./: .ghci  .gitignore  .travis.yml  AUTHORS.md  CHANGELOG.md  LICENSE  README.md  TODO  graphql.cabal  package.yaml  stack.yaml
Data/: GraphQL.hs
Data/GraphQL/: AST.hs  Encoder.hs  Error.hs  Execute.hs  Parser.hs  Printer.hs  Schema.hs  ServantSchema.hs
Data/GraphQL/AST/: Core.hs  Transform.hs
docs/tutorial/: Makefile  tutorial.css  tutorial.html  tutorial.lhs  tutorial.rst
tests/: golden.hs  tasty.hs
tests/Test/: StarWars.hs
tests/Test/StarWars/: Data.hs  QueryTests.hs  Schema.hs
tests/data/: kitchen-sink.graphql  kitchen-sink.graphql.golden  kitchen-sink.min.graphql
