name:                graphql
version:             0.2.1
synopsis:            Haskell GraphQL implementation
description:
  This package provides a rudimentary parser for the
  <https://facebook.github.io/graphql/ GraphQL> language.
homepage:            https://github.com/jdnavarro/graphql-haskell
bug-reports:         https://github.com/jdnavarro/graphql-haskell/issues
license:             BSD3
license-file:        LICENSE
author:              Danny Navarro
maintainer:          j@dannynavarro.net
copyright:           Copyright (C) 2015 J. Daniel Navarro
category:            Web
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.8.4, GHC == 7.10.2
extra-source-files:  README.md CHANGELOG.md stack.yaml
data-files:          tests/data/*.graphql
                     tests/data/*.graphql.golden

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  exposed-modules:     Data.GraphQL.AST
                       Data.GraphQL.Parser
  build-depends:       base >= 4.7 && < 5,
                       text >=0.11.3.1,
                       attoparsec >=0.10.4.0

test-suite golden
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             golden.hs
  ghc-options:         -Wall
  build-depends:       base >= 4.6 && <5,
                       bytestring,
                       text,
                       attoparsec,
                       tasty >=0.10,
                       tasty-golden,
                       graphql

source-repository head
  type:     git
  location: git://github.com/jdnavarro/graphql-haskell.git
